--- a/package.json
+++ b/package.json
@@ -1,65 +1,36 @@
 {
-  "name": ".",
+  "name": "wagermore",
   "private": true,
   "type": "module",
+  "description": "Wagermore - A modern monorepo with React frontend and Hono backend",
+  "workspaces": [
+    "packages/frontend",
+    "packages/backend"
+  ],
   "scripts": {
-    "dev": "vite dev --port 3000",
-    "build": "vite build",
-    "serve": "vite preview",
-    "test": "vitest run",
-    "lint": "eslint",
-    "format": "prettier",
-    "check": "prettier --write . && eslint --fix",
-    "db:generate": "drizzle-kit generate",
-    "db:migrate": "drizzle-kit migrate",
-    "db:push": "drizzle-kit push",
-    "db:pull": "drizzle-kit pull",
-    "db:studio": "drizzle-kit studio"
-  },
-  "dependencies": {
-    "@tailwindcss/vite": "^4.0.6",
-    "@tanstack/react-devtools": "^0.7.0",
-    "@tanstack/react-query": "^5.66.5",
-    "@tanstack/react-query-devtools": "^5.84.2",
-    "@tanstack/react-router": "^1.132.0",
-    "@tanstack/react-router-devtools": "^1.132.0",
-    "@tanstack/react-router-ssr-query": "^1.131.7",
-    "@tanstack/react-start": "^1.132.0",
-    "@tanstack/react-store": "^0.7.0",
-    "@tanstack/router-plugin": "^1.132.0",
-    "@tanstack/store": "^0.7.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "drizzle-kit": "^0.30.0",
-    "drizzle-orm": "^0.39.0",
-    "lucide-react": "^0.544.0",
-    "pg": "^8.11.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "tailwind-merge": "^3.0.2",
-    "tailwindcss": "^4.0.6",
-    "tw-animate-css": "^1.3.6",
-    "vite-tsconfig-paths": "^5.1.4"
+    "dev": "concurrently \"pnpm run dev:frontend\" \"pnpm run dev:backend\"",
+    "dev:frontend": "pnpm --filter @wagermore/frontend dev",
+    "dev:backend": "pnpm --filter @wagermore/backend dev",
+    "build": "pnpm run build:frontend && pnpm run build:backend",
+    "build:frontend": "pnpm --filter @wagermore/frontend build",
+    "build:backend": "pnpm --filter @wagermore/backend build",
+    "start:backend": "pnpm --filter @wagermore/backend start",
+    "preview": "pnpm --filter @wagermore/frontend serve",
+    "test": "pnpm --filter @wagermore/frontend test",
+    "lint": "pnpm --filter @wagermore/frontend lint",
+    "format": "pnpm --filter @wagermore/frontend format",
+    "check": "pnpm --filter @wagermore/frontend check",
+    "db:generate": "pnpm --filter @wagermore/backend db:generate",
+    "db:migrate": "pnpm --filter @wagermore/backend db:migrate",
+    "db:push": "pnpm --filter @wagermore/backend db:push",
+    "db:pull": "pnpm --filter @wagermore/backend db:pull",
+    "db:studio": "pnpm --filter @wagermore/backend db:studio"
   },
   "devDependencies": {
-    "@tanstack/devtools-event-client": "^0.3.2",
-    "@tanstack/devtools-vite": "^0.3.11",
-    "@tanstack/eslint-config": "^0.3.0",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/react": "^16.2.0",
-    "@types/node": "^22.10.2",
-    "@types/pg": "^8.10.0",
-    "@types/react": "^19.2.0",
-    "@types/react-dom": "^19.2.0",
-    "@vitejs/plugin-react": "^5.0.4",
-    "babel-plugin-react-compiler": "^1.0.0",
-    "dotenv": "^16.0.0",
-    "jsdom": "^27.0.0",
-    "prettier": "^3.5.3",
-    "tsx": "^4.0.0",
-    "typescript": "^5.7.2",
-    "vite": "^7.1.7",
-    "vitest": "^3.0.5",
-    "web-vitals": "^5.1.0"
+    "concurrently": "^8.2.2"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "pnpm": ">=8.0.0"
   }
 }
