--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "pnpm": ">=8.0.0"
   },
   "dependencies": {
-    "@hono/node-server": "^1.19.6"
+    "@hono/node-server": "^1.19.6",
+    "postgres": "^3.4.7"
   }
 }
