--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -14,12 +14,21 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.13.1",
+    "@hono/zod-validator": "^0.7.4",
+    "bcryptjs": "^3.0.3",
     "drizzle-orm": "^0.39.0",
     "hono": "^4.10.5",
-    "pg": "^8.11.0"
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.10",
+    "pg": "^8.11.0",
+    "postgres": "^3.4.7",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^3.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.10.2",
+    "@types/nodemailer": "^7.0.4",
     "@types/pg": "^8.10.0",
     "dotenv": "^16.0.0",
     "drizzle-kit": "^0.30.0",
