Add Wagmi web3 integration and wallet hooks
Add wagmi client, provider, wallet hooks and re-exports. Update
package.json with wagmi/viem deps and CLI scripts. Add Web3 utilities
(contract addresses, explorer helpers) and a Wagmi provider wired into
the app QueryClient. Introduce header/nav component, navigation
constants, favicons and web app manifest, new auth/dashboard routes and
generated route tree updates, plus small TypeScript/import fixes across
UI components and utility code.

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -6,6 +6,9 @@
     "dev": "vite dev --port 3000",
     "build": "vite build",
     "serve": "vite preview",
+    "wagmi:generate": "wagmi generate",
+    "wagmi:watch": "wagmi generate --watch",
+    "contracts:sync": "pnpm wagmi:generate && echo 'Contracts synced!'",
     "test": "vitest run",
     "lint": "eslint",
     "format": "prettier"
@@ -49,6 +52,8 @@
     "@tanstack/react-store": "^0.7.0",
     "@tanstack/router-plugin": "^1.132.0",
     "@tanstack/store": "^0.7.0",
+    "@wagmi/cli": "^2.8.0",
+    "@wagmi/connectors": "^7.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -67,7 +72,9 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.0.6",
     "vaul": "^1.1.2",
+    "viem": "^2.40.0",
     "vite-tsconfig-paths": "^5.1.4",
+    "wagmi": "^3.0.1",
     "zod": "^4.1.12"
   },
   "devDependencies": {
