--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
   "engines": {
     "node": ">=18.0.0",
     "pnpm": ">=8.0.0"
+  },
+  "dependencies": {
+    "@tanstack/react-form": "^1.26.0",
+    "@tanstack/zod-form-adapter": "^0.42.1"
   }
 }
