--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "node": ">=18.0.0",
     "pnpm": ">=8.0.0"
   },
-  "dependencies": {
-    "@tanstack/react-form": "^1.26.0",
-    "@tanstack/zod-form-adapter": "^0.42.1"
+  "pnpm": {
+    "overrides": {
+      "react": "^18.2.0",
+      "react-dom": "^18.2.0"
+    }
   }
 }
