--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -22,6 +22,7 @@
     "nodemailer": "^7.0.10",
     "pg": "^8.11.0",
     "postgres": "^3.4.7",
+    "viem": "^2.40.3",
     "zod": "^4.1.12"
   },
   "devDependencies": {
