--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -43,15 +43,13 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-devtools": "^0.7.0",
+    "@tanstack/react-form": "^1.26.0",
     "@tanstack/react-query": "^5.66.5",
     "@tanstack/react-query-devtools": "^5.84.2",
     "@tanstack/react-router": "^1.132.0",
     "@tanstack/react-router-devtools": "^1.132.0",
-    "@tanstack/react-router-ssr-query": "^1.131.7",
-    "@tanstack/react-start": "^1.132.0",
-    "@tanstack/react-store": "^0.7.0",
-    "@tanstack/router-plugin": "^1.132.0",
-    "@tanstack/store": "^0.7.0",
+    "@tanstack/router-vite-plugin": "^1.132.0",
+    "@tanstack/zod-form-adapter": "^0.42.1",
     "@wagmi/cli": "^2.8.0",
     "@wagmi/connectors": "^7.0.1",
     "class-variance-authority": "^0.7.1",
@@ -62,9 +60,9 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.544.0",
     "next-themes": "^0.4.6",
-    "react": "^19.2.0",
+    "react": "^18.3.1",
     "react-day-picker": "^9.11.2",
-    "react-dom": "^19.2.0",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.66.1",
     "react-resizable-panels": "^3.0.6",
     "recharts": "2.15.4",
@@ -78,16 +76,13 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
-    "@tanstack/devtools-event-client": "^0.3.2",
-    "@tanstack/devtools-vite": "^0.3.11",
     "@tanstack/eslint-config": "^0.3.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
     "@types/node": "^22.10.2",
-    "@types/react": "^19.2.0",
-    "@types/react-dom": "^19.2.0",
+    "@types/react": "^18.3.27",
+    "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react": "^5.0.4",
-    "babel-plugin-react-compiler": "^1.0.0",
     "jsdom": "^27.0.0",
     "prettier": "^3.5.3",
     "tw-animate-css": "^1.4.0",
